src/objects/Assignment_Group_Name__c.object
<CustomObject>
    <fields>
        <fullName>Count_of_Users__c</fullName>
        <inlineHelpText>Max number of user that can be assigned is 1000</inlineHelpText>
        <label>Count of Users</label>
        <summaryForeignKey>Assignment_Groups__c.Group_Name__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Cases</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Assignment Group</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assignment Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Assignment_Group_Recods_less_than_1000</fullName>
        <active>true</active>
        <description>Total number of Assignment Group records tied to an Assignment Group Name cannot be greater than 1000 for programming efficency</description>
        <errorConditionFormula>Count_of_Users__c &gt;990</errorConditionFormula>
        <errorMessage>Total number of users assigned to an Assignment Group Name cannot exceed more than 990</errorMessage>
    </validationRules>
</CustomObject>